Inserindo imagens e listas com html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header>
+        <img src="avatar.jpg" alt=" Ilustração do rosto de uma pessoa">
         <h1>Exercício prático </h1>
     </header>
     <section>
@@ -16,6 +17,7 @@
         </header>
         <article>
             <header>
+                <img src="postagem.jpg" alt="CODE HTML">
                 <h3>Post #1</h3>
             </header>
             <p>
@@ -23,6 +25,19 @@
             </p>
         </article>
     </section>
-    <footer></footer>
+    <footer>
+        <ul>
+            <li>
+                <a href="mailto:yoda@gmail.com">
+                yoda@gmail.com
+            </a>
+            </li>
+            <li>
+                <a href="mailto:yoda@gmail.com">
+                yoda@gmail.com
+            </a>
+            </li>
+        </ul>
+    </footer>
 </body>
 </html>
